// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeadBlockSection tests When classifications are provided should render with classifications 1`] = `
<div>
  <div
    class="LeadBlockSection Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <div
              class="LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <svg
                class="brandLogo"
                viewBox="0 0 270 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M100 0h170v100H100z"
                />
                <g
                  fill="#009fe3"
                >
                  <path
                    d="M248.236 32.877h7.013v34.479h-7.013zM114.327 41.364h7.013v25.993h-7.013zM114.327 32.924h7.013v6.561h-7.013zM169.018 60.943a6.594 6.594 0 1 1 6.595-6.593 6.594 6.594 0 0 1-6.595 6.592m0-20.1a13.507 13.507 0 1 0 13.509 13.508 13.506 13.506 0 0 0-13.509-13.507M145.1 55.423a6.585 6.585 0 1 1-.029-2.326h6.974a13.514 13.514 0 1 0 .014 2.326ZM243.976 54.271a13.507 13.507 0 1 0-13.5 13.54 13.027 13.027 0 0 0 5.008-1.019V58.55a6.559 6.559 0 1 1 1.588-4.244c0 .019-.006.036-.006.054v11.667l.017-.008v1.338h6.9V54.272ZM199.566 40.8a13.5 13.5 0 0 0-13.5 13.472h-.006V76.75h6.9V54.314h.014v-.009a6.668 6.668 0 1 1 1.589 4.25V66.8a13.046 13.046 0 0 0 5.006 1.017 13.508 13.508 0 0 0 0-27.016Z"
                  />
                </g>
                <path
                  d="M0 0h100v100H0z"
                  fill="#009fe3"
                />
                <g
                  fill="#fff"
                >
                  <path
                    d="M62.176 34.911 57.84 52.77h-.084l-4.339-17.859H40.11v20.28a7.315 7.315 0 0 0-5.239-6.716c2.255-1.235 3.742-2.891 3.742-5.953 0-3.1-1.7-7.611-9.693-7.611H12.3V65.27h17.215c5.121 0 10.16-2.878 10.6-8.443v8.443h8.844V45.8h.084l5.267 19.47h6.973l5.272-19.47h.085v19.47h8.844V34.911ZM21.65 42.139h4.933c1.913 0 3.188.554 3.188 2.084 0 1.956-1.233 2.507-3.188 2.507H21.65Zm5.485 15.9H21.65v-5.653h5.867c2.211 0 3.272.978 3.272 2.763 0 2.339-1.7 2.891-3.655 2.891M78.358 34.914h9.354V65.27h-9.354z"
                  />
                </g>
              </svg>
            </div>
            <div
              class="LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <h1
                class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h1"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <p
                class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body2"
              >
                fature value 1
              </p>
            </div>
            <div
              class="ctaContainer LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <button
                class="MuiButtonBase-root MuiButton-root buttonStyles-root-81 MuiButton-contained buttonStyles-contained-83 quotationBtn MuiButton-containedPrimary"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label buttonStyles-label-84"
                >
                  cta label
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests When classifications are provided should render with classifications without features 1`] = `
<div>
  <div
    class="LeadBlockSection Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <div
              class="LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <svg
                class="brandLogo"
                viewBox="0 0 270 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M100 0h170v100H100z"
                />
                <g
                  fill="#009fe3"
                >
                  <path
                    d="M248.236 32.877h7.013v34.479h-7.013zM114.327 41.364h7.013v25.993h-7.013zM114.327 32.924h7.013v6.561h-7.013zM169.018 60.943a6.594 6.594 0 1 1 6.595-6.593 6.594 6.594 0 0 1-6.595 6.592m0-20.1a13.507 13.507 0 1 0 13.509 13.508 13.506 13.506 0 0 0-13.509-13.507M145.1 55.423a6.585 6.585 0 1 1-.029-2.326h6.974a13.514 13.514 0 1 0 .014 2.326ZM243.976 54.271a13.507 13.507 0 1 0-13.5 13.54 13.027 13.027 0 0 0 5.008-1.019V58.55a6.559 6.559 0 1 1 1.588-4.244c0 .019-.006.036-.006.054v11.667l.017-.008v1.338h6.9V54.272ZM199.566 40.8a13.5 13.5 0 0 0-13.5 13.472h-.006V76.75h6.9V54.314h.014v-.009a6.668 6.668 0 1 1 1.589 4.25V66.8a13.046 13.046 0 0 0 5.006 1.017 13.508 13.508 0 0 0 0-27.016Z"
                  />
                </g>
                <path
                  d="M0 0h100v100H0z"
                  fill="#009fe3"
                />
                <g
                  fill="#fff"
                >
                  <path
                    d="M62.176 34.911 57.84 52.77h-.084l-4.339-17.859H40.11v20.28a7.315 7.315 0 0 0-5.239-6.716c2.255-1.235 3.742-2.891 3.742-5.953 0-3.1-1.7-7.611-9.693-7.611H12.3V65.27h17.215c5.121 0 10.16-2.878 10.6-8.443v8.443h8.844V45.8h.084l5.267 19.47h6.973l5.272-19.47h.085v19.47h8.844V34.911ZM21.65 42.139h4.933c1.913 0 3.188.554 3.188 2.084 0 1.956-1.233 2.507-3.188 2.507H21.65Zm5.485 15.9H21.65v-5.653h5.867c2.211 0 3.272.978 3.272 2.763 0 2.339-1.7 2.891-3.655 2.891M78.358 34.914h9.354V65.27h-9.354z"
                  />
                </g>
              </svg>
            </div>
            <div
              class="LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <h1
                class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h1"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="ctaContainer LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <button
                class="MuiButtonBase-root MuiButton-root buttonStyles-root-101 MuiButton-contained buttonStyles-contained-103 quotationBtn MuiButton-containedPrimary"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label buttonStyles-label-104"
                >
                  cta label
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests When user navigates with selected systems query string should render back to your selection button 1`] = `
<div>
  <div
    class="LeadBlockSection Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <div
              class="LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <svg
                class="brandLogo"
                viewBox="0 0 270 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M100 0h170v100H100z"
                />
                <g
                  fill="#009fe3"
                >
                  <path
                    d="M248.236 32.877h7.013v34.479h-7.013zM114.327 41.364h7.013v25.993h-7.013zM114.327 32.924h7.013v6.561h-7.013zM169.018 60.943a6.594 6.594 0 1 1 6.595-6.593 6.594 6.594 0 0 1-6.595 6.592m0-20.1a13.507 13.507 0 1 0 13.509 13.508 13.506 13.506 0 0 0-13.509-13.507M145.1 55.423a6.585 6.585 0 1 1-.029-2.326h6.974a13.514 13.514 0 1 0 .014 2.326ZM243.976 54.271a13.507 13.507 0 1 0-13.5 13.54 13.027 13.027 0 0 0 5.008-1.019V58.55a6.559 6.559 0 1 1 1.588-4.244c0 .019-.006.036-.006.054v11.667l.017-.008v1.338h6.9V54.272ZM199.566 40.8a13.5 13.5 0 0 0-13.5 13.472h-.006V76.75h6.9V54.314h.014v-.009a6.668 6.668 0 1 1 1.589 4.25V66.8a13.046 13.046 0 0 0 5.006 1.017 13.508 13.508 0 0 0 0-27.016Z"
                  />
                </g>
                <path
                  d="M0 0h100v100H0z"
                  fill="#009fe3"
                />
                <g
                  fill="#fff"
                >
                  <path
                    d="M62.176 34.911 57.84 52.77h-.084l-4.339-17.859H40.11v20.28a7.315 7.315 0 0 0-5.239-6.716c2.255-1.235 3.742-2.891 3.742-5.953 0-3.1-1.7-7.611-9.693-7.611H12.3V65.27h17.215c5.121 0 10.16-2.878 10.6-8.443v8.443h8.844V45.8h.084l5.267 19.47h6.973l5.272-19.47h.085v19.47h8.844V34.911ZM21.65 42.139h4.933c1.913 0 3.188.554 3.188 2.084 0 1.956-1.233 2.507-3.188 2.507H21.65Zm5.485 15.9H21.65v-5.653h5.867c2.211 0 3.272.978 3.272 2.763 0 2.339-1.7 2.891-3.655 2.891M78.358 34.914h9.354V65.27h-9.354z"
                  />
                </g>
              </svg>
            </div>
            <div
              class="LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <h1
                class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h1"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="ctaContainer LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root buttonStyles-root-121 MuiButton-text buttonStyles-text-122 backToYourSelectionBtn MuiButton-textPrimary MuiButton-textSizeLarge MuiButton-sizeLarge"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: sdp.leadBlock.backToYourSelection\\",\\"action\\":\\"system-configurator-page?referer=sys_details\\"}"
                href="system-configurator-page?referer=sys_details"
                rel="noopener noreferrer"
                tabindex="0"
              >
                <span
                  class="MuiButton-label buttonStyles-label-124"
                >
                  <span
                    class="MuiButton-startIcon buttonStyles-startIcon-125 MuiButton-iconSizeLarge"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                      />
                    </svg>
                  </span>
                  MC: sdp.leadBlock.backToYourSelection
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
              <button
                class="MuiButtonBase-root MuiButton-root buttonStyles-root-121 MuiButton-contained buttonStyles-contained-123 quotationBtn MuiButton-containedPrimary"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label buttonStyles-label-124"
                >
                  cta label
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should not render systemAttributes Card with no uniqueSellingPropositions 1`] = `
<div>
  <div
    class="LeadBlockSection Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <div
              class="LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <h1
                class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h1"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="ctaContainer LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <button
                class="MuiButtonBase-root MuiButton-root buttonStyles-root-61 MuiButton-contained buttonStyles-contained-63 quotationBtn MuiButton-containedPrimary"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label buttonStyles-label-64"
                >
                  cta label
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should render 1`] = `
<div>
  <div
    class="LeadBlockSection Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <div
              class="LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <h1
                class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h1"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="ctaContainer LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <button
                class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-contained buttonStyles-contained-3 quotationBtn MuiButton-containedPrimary"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label buttonStyles-label-4"
                >
                  cta label
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should render with categories 1`] = `
<div>
  <div
    class="LeadBlockSection Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <div
              class="LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <svg
                class="brandLogo"
                viewBox="0 0 270 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M100 0h170v100H100z"
                />
                <g
                  fill="#009fe3"
                >
                  <path
                    d="M248.236 32.877h7.013v34.479h-7.013zM114.327 41.364h7.013v25.993h-7.013zM114.327 32.924h7.013v6.561h-7.013zM169.018 60.943a6.594 6.594 0 1 1 6.595-6.593 6.594 6.594 0 0 1-6.595 6.592m0-20.1a13.507 13.507 0 1 0 13.509 13.508 13.506 13.506 0 0 0-13.509-13.507M145.1 55.423a6.585 6.585 0 1 1-.029-2.326h6.974a13.514 13.514 0 1 0 .014 2.326ZM243.976 54.271a13.507 13.507 0 1 0-13.5 13.54 13.027 13.027 0 0 0 5.008-1.019V58.55a6.559 6.559 0 1 1 1.588-4.244c0 .019-.006.036-.006.054v11.667l.017-.008v1.338h6.9V54.272ZM199.566 40.8a13.5 13.5 0 0 0-13.5 13.472h-.006V76.75h6.9V54.314h.014v-.009a6.668 6.668 0 1 1 1.589 4.25V66.8a13.046 13.046 0 0 0 5.006 1.017 13.508 13.508 0 0 0 0-27.016Z"
                  />
                </g>
                <path
                  d="M0 0h100v100H0z"
                  fill="#009fe3"
                />
                <g
                  fill="#fff"
                >
                  <path
                    d="M62.176 34.911 57.84 52.77h-.084l-4.339-17.859H40.11v20.28a7.315 7.315 0 0 0-5.239-6.716c2.255-1.235 3.742-2.891 3.742-5.953 0-3.1-1.7-7.611-9.693-7.611H12.3V65.27h17.215c5.121 0 10.16-2.878 10.6-8.443v8.443h8.844V45.8h.084l5.267 19.47h6.973l5.272-19.47h.085v19.47h8.844V34.911ZM21.65 42.139h4.933c1.913 0 3.188.554 3.188 2.084 0 1.956-1.233 2.507-3.188 2.507H21.65Zm5.485 15.9H21.65v-5.653h5.867c2.211 0 3.272.978 3.272 2.763 0 2.339-1.7 2.891-3.655 2.891M78.358 34.914h9.354V65.27h-9.354z"
                  />
                </g>
              </svg>
            </div>
            <div
              class="LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <h1
                class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h1"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="ctaContainer LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <button
                class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-contained buttonStyles-contained-23 quotationBtn MuiButton-containedPrimary"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label buttonStyles-label-24"
                >
                  cta label
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should render with uniqueSellingPropositions 1`] = `
<div>
  <div
    class="LeadBlockSection Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <div
              class="LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <h1
                class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h1"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="ctaContainer LeadBlock-module_LeadBlockContentSection__CUG63"
            >
              <button
                class="MuiButtonBase-root MuiButton-root buttonStyles-root-41 MuiButton-contained buttonStyles-contained-43 quotationBtn MuiButton-containedPrimary"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label buttonStyles-label-44"
                >
                  cta label
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiGrid-root card MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
            data-testid="system-attributes-card"
          >
            <div
              class="ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--pearl__gkooI"
            >
              <div
                class="PostItCard-module_PostItCard__h-kTp"
              >
                <div
                  class="PostItCard-module_section__sfiQz"
                >
                  <div
                    class="iconList"
                  >
                    <ul
                      class="IconList-module_IconList__KweQa"
                    >
                      <li
                        class="IconList-module_ListItem__WMqQr IconList-module_ListItem--isCompact__Um1fv"
                      >
                        <div
                          class="IconList-module_icon__KKtTa"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                            />
                          </svg>
                        </div>
                        <div
                          class="IconList-module_content__21w5w"
                        >
                          <p
                            class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                          >
                            fature value 1
                          </p>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
